kustomize/overlays/stage/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-symphony
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
